Active flag in navbar, dummy config and status pages.

--- a/web/app/views/schedule-detail.html
+++ b/web/app/views/schedule-detail.html
@@ -84,5 +84,13 @@
   </div>
 </div>
 
+<!-- Buttons -->
+<div class="control-group">
+  <div class="controls">
+    <button id="buttonOk" name="button-ok" class="btn">Save</button>
+    <a href="#/schedules" id="buttonCancel" name="button-cancel" class="btn">Cancel</a>
+  </div>
+</div>
+
 </fieldset>
 </form>
